# ged-invest-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  mcp.example.json  pyproject.toml  render.yaml
src/ged_invest_mcp/: __init__.py  server.py
src/ged_invest_mcp/formwork/: __init__.py  calculator.py  catalog.py  drawing.py  messages_pl.py  pressure.py  tools.py
tests/: test_formwork.py
