[project]
name = "ged-invest-mcp"
version = "0.1.0"
description = "Ged Invest MCP server - a growing set of construction tools (starting with wall formwork quantity takeoff)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ged-Invest" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
]

[project.scripts]
ged-invest-mcp = "ged_invest_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ged_invest_mcp"]
